# wasi-vfs

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
.github/workflows/: main.yml  release.yml
Formula/: wasi-vfs.rb
crates/wasi-libc-trampoline-bindgen/: Cargo.toml
crates/wasi-libc-trampoline-bindgen/src/: lib.rs  main.rs  object_link.rs  wrapper.rs
crates/wasi-vfs-cli/: Cargo.toml
crates/wasi-vfs-cli/src/: lib.rs  module_link.rs
docs/: debugging.md
examples/: .gitignore  getline.c
src/: alloc.rs  init.c  lib.rs  trace.rs  trampoline_generated.c  trampoline_generated.rs  trampoline_generated_legacy_wasi_libc.c  wasi_snapshot_preview1.rs
src/embed/: linked_storage.c  linked_storage.rs  mod.rs
tests/run-make/: check.h  tools.mk
tests/run-make/canonical-path/: Makefile  main.c
tests/run-make/chdir-emulation/: Makefile  main.c
tests/run-make/libc-api/: Makefile  hello.txt  main.c
tests/run-make/libc-api/mnt/: hello.txt
tests/run-make/libc-api/mnt/subdir/: inner.txt
tests/run-make/mapdir-root/: Makefile  main.c
tests/run-make/minimum-link/: Makefile
tests/run-make/multi-mapdir/: Makefile  main.c
tests/run-make/non-ascii/: Makefile  main.c
tests/run-make/non-ascii/mnt/: emoji-🐼-🐶-🐱.txt  Привет.txt  こんにちは.txt
tests/run-make/pack-twice/: Makefile  main.c
tests/run-make/pack-twice-reactor/: Makefile  check.js  main.c
tests/run-make/parent-dir/: Makefile  main.c
tests/run-make/polling/: Makefile  main.c
tests/run-make/reactor-model/: Makefile  check.js  main.c
tests/run-make/read-root-dir/: Makefile  main.c
tests/run-make/readdir/: Makefile  main.c
tests/run-make/seek/: Makefile  main.c
tools/: release.py  run-make-test.sh
