[package]
name = "wasi-vfs"
version = "0.1.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
wasi = "0.11.0"
wee_alloc = { version = "0.4.5", optional = true }


[build-dependencies]
cc = "1.0"

[workspace]
members = [
  "crates/wasi-libc-trampoline-bindgen",
  "crates/wasi-vfs-cli",
]

[features]
trace-syscall = []
legacy-wasi-libc = []
module-linking = ["wee_alloc"]
