[package]
name = "wasi-vfs"
version = "0.5.5"
edition = "2021"
authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
license = "Apache-2.0 WITH LLVM-exception"
description = "A virtual filesystem layer for WASI"
repository = "https://github.com/kateinoigakukun/wasi-vfs"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "wasi"]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
wasi = "0.11.0"
wee_alloc = { version = "0.4.5", optional = true }


[build-dependencies]
cc = "1.0"

[workspace]
members = [
  "crates/wasi-libc-trampoline-bindgen",
  "crates/wasi-vfs-cli",
]

[features]
trace-syscall = []
legacy-wasi-libc = []
module-linking = ["wee_alloc"]
