[package]
name = "wasi-vfs-cli"
version = "0.5.5"
edition = "2024"

[[bin]]
name = "wasi-vfs"

[dependencies]
anyhow = "1.0.40"
structopt = "0.3.21"
tokio = { version = "1", features = ["rt"] }
wasm-encoder = "0.243.0"
wasmparser = "0.243.0"
wasmtime = "40.0.0"
wasmtime-wasi = "40.0.0"
wasmtime-wizer = { version = "40.0.0", features = ["wasmtime"] }
